# setrem-developer-demo

./: .gitignore  NOTEBOOK.md  OLD.md  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
microservices/: .gitignore
microservices/github-api/: Dockerfile  README.md  main.py
microservices/github-api/requirements/: common.txt
microservices/github-api/src/: env.py  github.py  main.py  queue.py
microservices/github-api/test/unit/: test_github.py  test_queue.py
microservices/github-clone/: Dockerfile  README.md  main.py
microservices/github-clone-lambda/: lambda.py  requirements.txt
microservices/github-clone/requirements/: common.txt  dev.txt
microservices/github-clone/src/: bucket.py  env.py  manager.py  queue.py  repo.py
microservices/github-clone/src/util/: converter.py  generator.py  logger.py
microservices/github-clone/test/unit/: test_bucket.py  test_clone.py  test_queue.py  test_repo.py
microservices/github-clone/test/unit/util/: test_converter.py  test_generator.py
notebooks/: .gitignore  kmeans-clustering-on-aws.ipynb  kmeans-clustering.ipynb
notebooks/dataset-for-test/: main.py
tf/: .gitignore
tf/dev/: main.tf  terraform.tfstate.backup  variables.tf
tf/modules/common/: ecs_cluster.tf  outputs.tf  sqs.tf  variables.tf  vpc.tf
tf/modules/github/: alb.tf  ecs.tf  push_github_api.tf  roles.tf  sqs.tf  variables.tf
tf/modules/github-api/: alb.tf  ecr.tf  ecs.tf  ecs_service.tf  roles.tf  variables.tf
tf/modules/github-clone/: ecr.tf  ecs.tf  ecs_service.tf  push_github_clone.tf  roles.tf  s3.tf  variables.tf
tf/modules/github-clone-lambda/: lambda.tf  s3.tf  variables.tf
tf/scripts/: build_lambdas.sh
