[tool.poetry]
name = "setrem-developer-demo"
version = "0.1.0"
description = ""
authors = ["Gabriel Richter>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
requests = "^2.32.3"
boto3 = "1.34.125"
gitpython = "^3.1.43"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
coverage = "^7.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
