[tool.poetry]
name = "setrem-developer-demo"
version = "0.1.0"
description = ""
authors = ["Gabriel Richter>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
requests = "^2.32.3"
boto3 = "1.34.125"
gitpython = "^3.1.43"
jupyterlab = "^4.2.3"
notebook = "^7.2.1"
scikit-learn = "^1.5.1"
tree-sitter = "^0.22.3"
tree-sitter-python = "^0.21.0"
tree-sitter-typescript = "^0.21.2"
tree-sitter-go = "^0.21.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
ipywidgets = "^8.1.3"
ipympl = "^0.9.4"
tree-sitter-javascript = "^0.21.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
coverage = "^7.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
